Fix layout issues

--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -13,11 +13,11 @@
         text-transform: uppercase;
         margin: 0;
 
-        @media screen and (min-width: 768px) {
+        @media screen and (min-width: $bp-tablet) {
             font-size: 24px;
         }
 
-        @media screen and (min-width: 1440px) {
+        @media screen and (min-width: $bp-desktop) {
             font-size: 32px;
         }
     }
