--- a/scss/layouts/_container.scss
+++ b/scss/layouts/_container.scss
@@ -4,7 +4,7 @@
     margin: 0 auto;
     padding: 0 50px;
 
-    @media screen and (min-width: 768px) {
+    @media screen and (min-width: $bp-desktop) {
         padding: 0 148px;
     }
 }
